Fixed extra white space

--- a/website/css/style.css
+++ b/website/css/style.css
@@ -2653,7 +2653,7 @@ h3 {
 
 /* line 1, C:/Users/SPN Graphics/Desktop/CL September/Edu mark/207 Education/HTML/scss/_team.scss */
 .our_team_member {
-  padding-top: 134px;
+  padding-top: 70px;
   padding-bottom: 130px;
 }
 
